refactoring names entities dto and your endpoints
