# modules/RestBuilder/RestBuilder-api/src/main/java/restbuilder/resource/v1_0/CartOutputResource.java
@@ -1,107 +1,0 @@
-package restbuilder.resource.v1_0;
-
-import com.liferay.portal.kernel.service.GroupLocalService;
-import com.liferay.portal.kernel.service.RoleLocalService;
-import com.liferay.portal.vulcan.accept.language.AcceptLanguage;
-import com.liferay.portal.vulcan.pagination.Page;
-
-import java.util.Locale;
-
-import javax.annotation.Generated;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import javax.ws.rs.core.UriInfo;
-
-import org.osgi.annotation.versioning.ProviderType;
-
-import restbuilder.dto.v1_0.CartOutput;
-
-/**
- * To access this resource, run:
- *
- *     curl -u your@email.com:yourpassword -D - http://localhost:8080/o/RestBuilder/v1.0
- *
- * @author Wesley Roberts
- * @generated
- */
-@Generated("")
-@ProviderType
-public interface CartOutputResource {
-
-	public static Builder builder() {
-		return FactoryHolder.factory.create();
-	}
-
-	public Page<CartOutput> getAllCarts() throws Exception;
-
-	public CartOutput getCartById(Integer cartId) throws Exception;
-
-	public Integer getTotalValueByCartId(Integer cartId) throws Exception;
-
-	public CartOutput createCart() throws Exception;
-
-	public CartOutput addProductToCart(Integer cartID, Integer productID)
-		throws Exception;
-
-	public CartOutput removeProductFromCart(Integer cartID, Integer productID)
-		throws Exception;
-
-	public void deleteCartById(Integer cartId) throws Exception;
-
-	public default void setContextAcceptLanguage(
-		AcceptLanguage contextAcceptLanguage) {
-	}
-
-	public void setContextCompany(
-		com.liferay.portal.kernel.model.Company contextCompany);
-
-	public default void setContextHttpServletRequest(
-		HttpServletRequest contextHttpServletRequest) {
-	}
-
-	public default void setContextHttpServletResponse(
-		HttpServletResponse contextHttpServletResponse) {
-	}
-
-	public default void setContextUriInfo(UriInfo contextUriInfo) {
-	}
-
-	public void setContextUser(
-		com.liferay.portal.kernel.model.User contextUser);
-
-	public void setGroupLocalService(GroupLocalService groupLocalService);
-
-	public void setRoleLocalService(RoleLocalService roleLocalService);
-
-	public static class FactoryHolder {
-
-		public static volatile Factory factory;
-
-	}
-
-	@ProviderType
-	public interface Builder {
-
-		public CartOutputResource build();
-
-		public Builder checkPermissions(boolean checkPermissions);
-
-		public Builder httpServletRequest(
-			HttpServletRequest httpServletRequest);
-
-		public Builder preferredLocale(Locale preferredLocale);
-
-		public Builder user(com.liferay.portal.kernel.model.User user);
-
-	}
-
-	@ProviderType
-	public interface Factory {
-
-		public Builder create();
-
-	}
-
-}
