# modules/RestBuilder/RestBuilder-impl/rest-openapi.yaml
@@ -88,7 +88,7 @@ components:
           description: number products that will be create
           type: integer
       type: object
-    ProductOutput:
+    Product:
       description: Product
       properties:
         name:
@@ -108,7 +108,7 @@ components:
           format: double
           type: number
       type: object
-    CartOutput:
+    Cart:
       description: Cart
       properties:
         id:
@@ -160,13 +160,13 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: "#/components/schemas/ProductOutput"
+                  $ref: "#/components/schemas/Product"
                 type: array
             application/xml:
               schema:
-                $ref: "#/components/schemas/ProductOutput"
+                $ref: "#/components/schemas/Product"
           description: ""
-      tags: ["ProductOutput"]
+      tags: ["Product"]
 
   "/product/{productId}":
     get:
@@ -182,12 +182,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ProductOutput"
+                $ref: "#/components/schemas/Product"
             application/xml:
               schema:
-                $ref: "#/components/schemas/ProductOutput"
+                $ref: "#/components/schemas/Product"
           description: ""
-      tags: ["ProductOutput"]
+      tags: ["Product"]
   "/product/create":
     post:
       operationId: createProduct
@@ -205,15 +205,15 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: "#/components/schemas/ProductOutput"
+                  $ref: "#/components/schemas/Product"
                 type: array
             application/xml:
               schema:
                 items:
-                  $ref: "#/components/schemas/ProductOutput"
+                  $ref: "#/components/schemas/Product"
                 type: array
           description: ""
-      tags: ["ProductInput"]
+      tags: ["Product"]
   "/product/update/{productId}":
     put:
       operationId: updateProductById
@@ -236,12 +236,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ProductOutput"
+                $ref: "#/components/schemas/Product"
             application/xml:
               schema:
-                $ref: "#/components/schemas/ProductOutput"
+                $ref: "#/components/schemas/Product"
           description: ""
-      tags: ["ProductInput"]
+      tags: ["Product"]
 
   "/product/delete/{productId}":
     delete:
@@ -258,7 +258,7 @@ paths:
             application/json: {}
             application/xml: {}
           description: ""
-      tags: ["ProductOutput"]
+      tags: ["Product"]
 
   "/category/all":
     get:
@@ -341,7 +341,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Category"
           description: ""
-      tags: ["CategoryInput"]
+      tags: ["Category"]
   "/category/update/{categoryId}":
     put:
       operationId: updateCategoryById
@@ -369,7 +369,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Category"
           description: ""
-      tags: ["CategoryInput"]
+      tags: ["Category"]
 
   "/category/delete/{categoryId}":
     delete:
@@ -448,7 +448,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Type"
           description: ""
-      tags: ["TypeInput"]
+      tags: ["Type"]
   "/type/update/{typeId}":
     put:
       operationId: updateTypeById
@@ -476,7 +476,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Type"
           description: ""
-      tags: ["TypeInput"]
+      tags: ["Type"]
 
   "/type/delete/{typeId}":
     delete:
@@ -504,12 +504,12 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/CartOutput"
+                  $ref: "#/components/schemas/Cart"
             application/xml:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/cart/{cartId}":
     get:
@@ -525,12 +525,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
             application/xml:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/cart/getTotalValue/{cartId}":
     get:
@@ -551,7 +551,7 @@ paths:
               schema:
                 type: integer
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/cart/create":
     get:
@@ -561,12 +561,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
             application/xml:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/addProductoCart/{cartID}/productID/{productID}":
     patch:
@@ -588,12 +588,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
             application/xml:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/removeProductFromCart/{cartID}/ProductID/{productID}":
     patch:
@@ -615,12 +615,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
             application/xml:
               schema:
-                $ref: "#/components/schemas/CartOutput"
+                $ref: "#/components/schemas/Cart"
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
 
   "/cart/delete/{cartId}":
     delete:
@@ -637,4 +637,4 @@ paths:
             application/json: {}
             application/xml: {}
           description: ""
-      tags: ["CartOutput"]
+      tags: ["Cart"]
